--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 0 10%;
   font-family: now_regular;
 }
