--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@
  // min-height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 10% ;
   font-family: now_regular;
   @media (max-width:720px) {
