--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,6 +40,7 @@
             height: 20rem;
             position: absolute;
             top:0;
+            right:0;
             z-index: -1;
         }
         }
@@ -136,8 +137,11 @@ body{
   text-align: center;
   font-family: now_regular;
   font-size: 1.8rem;
-
+  @media (max-width:720px) {
+    padding: 0rem 10% 0rem 10%;
+   }
   &__author{
     text-align: right;
+    font-size: 1.2rem;
   }
 }
