--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,7 @@
   border: none;
   -webkit-box-shadow: 0 0.2rem 2rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 0.2rem 2rem rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 body {
