--- a/styles/style.scss
+++ b/styles/style.scss
@@ -56,6 +56,7 @@
       outline: none;
       border:none;
         box-shadow: 0 0.2rem 2rem rgba(0,0,0,0.2);
+        cursor: pointer;
     }
 }
 body{
